--- a/packages/claudia/stories/helperComponents/Layout/styles.module.scss
+++ b/packages/claudia/stories/helperComponents/Layout/styles.module.scss
@@ -39,13 +39,14 @@
 
   overflow: auto;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
   gap: 8px;
-  align-items: center;
 
   width: 400px;
-  height: 110px;
+  height: 200px;
   margin-bottom: 16px;
-  padding: 0 24px;
+  padding: 24px;
 
   background-color: styles-theme-variables.$sys-neutral-background1-level;
   border: 1px solid styles-theme-variables.$sys-neutral-decor-disabled;
